--- a/app/views/photos/_photos.html.erb
+++ b/app/views/photos/_photos.html.erb
@@ -10,6 +10,7 @@
         </div>
         <div>
           <p><%= photo.content %></p>
+           <p><%= image_tag photo.image %></p>
         </div>
         <div>
           <%= render "likes/like_button", photo: photo %>
