--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -6,6 +6,7 @@
           <%= f.text_area :content, class: 'form-control', rows: 5 %>
         </div>
         <%= f.submit 'Post', class: 'btn btn-primary btn-block' %>
+        <%= f.file_field :image, id: :photo_image %>
       <% end %>
     </aside>
     <div class="col-xs-8">
