--- a/app/views/likes/_like_button.html.erb
+++ b/app/views/likes/_like_button.html.erb
@@ -1,11 +1,11 @@
 <% if current_user.like?(photo) %>
   <%= form_for(current_user.likes.find_by(photo_id: photo.id), html: { method: :delete }) do |f| %>
     <%= hidden_field_tag :photo_id, photo.id %>
-    <%= f.submit 'UnLike', class: 'btn btn-danger btn-block' %>
+    <%= f.submit 'UnLike', class: 'btn btn-warning btn-lg' %>
   <% end %>
 <% else %>
   <%= form_for(current_user.likes.build) do |f| %>
     <%= hidden_field_tag :photo_id, photo.id %>
-    <%= f.submit 'Like', class: 'btn btn-primary btn-block' %>
+    <%= f.submit 'Like', class: 'btn btn-primary btn-lg' %>
   <% end %>
 <% end %>
